--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -35,21 +35,34 @@
     </div>
 </nav>
 
-<div class="container-fluid">
-    {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
-        {% else %}
+<div class="card-deck">
+    {% if passed_exam %}
+        <div class="card">
+            <h5 ></h5>
+            <strong>Congratulations!</strong> You passed the exam with a score of {{ learner_grade }}%.
+        </div>
+    {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            <strong>Unfortunately,</strong> you failed the exam with a score of {{ learner_grade }}%.
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
+    {% endif %}
+    
+    <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+        {% for result in question_results %}
+            <div class="card">
+                <div class="card-body">
+                    <h6 class="card-title">{{ result.question }}</h6>
+                    {% if result.is_correct %}
+                        <p class="card-text text-success">Correct answer</p>
+                    {% else %}
+                        <p class="card-text text-danger">Incorrect answer</p>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
     </div>
+</div>
 </body>
 </html>
