--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -52,7 +52,7 @@
             </div>
 
             <div id="exam" class="collapse">
-                <form id="questionform" action="{% url 'submit_exam' %}" method="post">
+                <form id="questionform" action="{% url 'submit' %}" method="post">
                     {% csrf_token %}
                     {% for question in questions %}
                     <div class="card mt-1">
